// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backends local backend typescript snapshot 1`] = `
"import * as constructs from "constructs";
import * as cdktf from "cdktf";
class MyConvertedCode extends cdktf.TerraformStack {
  constructor(scope: constructs.Construct, name: string) {
    super(scope, name);
    new cdktf.LocalBackend(this, {
      path: "relative/path/to/terraform.tfstate",
    });
  }
}
"
`;

exports[`backends remote backend typescript snapshot 1`] = `
"import * as constructs from "constructs";
import * as cdktf from "cdktf";
class MyConvertedCode extends cdktf.TerraformStack {
  constructor(scope: constructs.Construct, name: string) {
    super(scope, name);
    new cdktf.RemoteBackend(this, {
      hostname: "app.terraform.io",
      organization: "company",
      workspaces: [
        {
          name: "my-app-prod",
        },
      ],
    });
  }
}
"
`;

exports[`backends remote state types typescript snapshot 1`] = `
"import * as constructs from "constructs";
import * as cdktf from "cdktf";
class MyConvertedCode extends cdktf.TerraformStack {
  constructor(scope: constructs.Construct, name: string) {
    super(scope, name);
    new cdktf.DataTerraformRemoteStateEtcdV3(this, "etcdv3", {
      endpoints: ["etcd-1:2379", "etcd-2:2379", "etcd-3:2379"],
      lock: true,
      prefix: "terraform-state/",
    });
    new cdktf.DataTerraformRemoteStateS3(this, "s3", {
      bucket: "mybucket",
      key: "path/to/my/key",
      region: "us-east-1",
    });
  }
}
"
`;

exports[`backends remote state typescript snapshot 1`] = `
"import * as constructs from "constructs";
import * as cdktf from "cdktf";
class MyConvertedCode extends cdktf.TerraformStack {
  constructor(scope: constructs.Construct, name: string) {
    super(scope, name);
    new cdktf.DataTerraformRemoteState(this, "vpc", {
      organization: "hashicorp",
      workspaces: [
        {
          name: "vpc-prod",
        },
      ],
    });
  }
}
"
`;
